v1.7.2/_sources/api/generated/pywr.recorders.NodeRecorder.rst.txt
pywr.recorders.NodeRecorder
===========================

.. currentmodule:: pywr.recorders

.. autoclass:: NodeRecorder

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~NodeRecorder.__init__
      ~NodeRecorder.after
      ~NodeRecorder.aggregated_value
      ~NodeRecorder.before
      ~NodeRecorder.finish
      ~NodeRecorder.is_constraint_violated
      ~NodeRecorder.load
      ~NodeRecorder.register
      ~NodeRecorder.reset
      ~NodeRecorder.setup
      ~NodeRecorder.unregister
      ~NodeRecorder.values
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NodeRecorder.agg_func
      ~NodeRecorder.children
      ~NodeRecorder.comment
      ~NodeRecorder.constraint_lower_bounds
      ~NodeRecorder.constraint_upper_bounds
      ~NodeRecorder.epsilon
      ~NodeRecorder.ignore_nan
      ~NodeRecorder.is_constraint
      ~NodeRecorder.is_double_bounded_constraint
      ~NodeRecorder.is_equality_constraint
      ~NodeRecorder.is_lower_bounded_constraint
      ~NodeRecorder.is_objective
      ~NodeRecorder.is_upper_bounded_constraint
      ~NodeRecorder.model
      ~NodeRecorder.name
      ~NodeRecorder.node
      ~NodeRecorder.parents
   
   